--- a/meta/crypto-platform.cabal
+++ b/meta/crypto-platform.cabal
@@ -33,6 +33,9 @@ data-files:          README.md
 
 Library
   Build-Depends:     base >= 3 && < 5
+                   , byteable
+                   , pem
+                   -- base memory types
                    , securemem
                    -- random
                    , crypto-random
